!fixup force microsite subtitle to remain visible on mobile

--- a/CancerGov/_src/Scripts/NCI/UX/Themes/purple/purple.scss
+++ b/CancerGov/_src/Scripts/NCI/UX/Themes/purple/purple.scss
@@ -55,6 +55,7 @@ a .feature-card.cgvArticle a:hover h3,
 }
 
 #nvcgSlUtilityBar {
+  display: block !important;
   background-color: $purple8;
 }
 
